# lfs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.db
src/: database.rs  entry.rs  local_storage.rs  main.rs  rusqlite_database.rs  sqlite_database.rs  storage.rs
src/web/: client.html  test.html
