[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.83"
chrono = "0.4.38"
dotenv = "0.15.0"
libc = "0.2.161"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
winapi = "0.3.9"
