[package]
name = "lfs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
async-trait = "0.1.83"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.1" }
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["fs", "macros"] }
tokio-stream = "0.1.16"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
